# spotify-api

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
spotify_api/: client.py  error.py  model.py  oauth2.py  repository.py  service.py  transformer.py
tests/: conftest.py  mocks.py  test_client.py  test_oauth2.py
