[tool.poetry]
name = "spotify-api"
version = "1.0.0"
description = "Simple client for the Spotify Web API"
authors = ["Saphyel <Saphyel@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Saphyel/spotify-api"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
